@@ -1,0 +1,6 @@
+## Process this file with automake to produce Makefile.in
+
+# include win32 project files into distribution
+EXTRA_DIST = dllmain.cpp \
+             gigedit.dev \
+             libgigedit.dev
