@@ -1,0 +1,129 @@
+[Project]
+FileName=libgigedit.dev
+Name=gigedit
+UnitCount=8
+Type=3
+Ver=1
+ObjFiles=
+Includes=C:\libgig-3.1.1\include;C:\libsndfile-1_0_17;C:\GTK\include\gtkmm-2.4;C:\GTK\include\glibmm-2.4;C:\GTK\lib\glibmm-2.4\include;C:\GTK\include\glib-2.0;C:\GTK\lib\glib-2.0\include;C:\GTK\include\sigc++-2.0;C:\GTK\lib\sigc++-2.0\include;C:\GTK\include\pangomm-1.4;C:\GTK\include\pango-1.0;C:\GTK\include\cairomm-1.0;C:\GTK\include\cairo;C:\GTK\lib\gtkmm-2.4\include;C:\GTK\lib\gdkmm-2.4\include;C:\GTK\include\atkmm-1.6;C:\GTK\include\gdkmm-2.4;C:\GTK\include\gtk-2.0;C:\GTK\lib\gtk-2.0\include;C:\GTK\include\atk-1.0
+Libs=C:\GTK\lib
+PrivateResource=libgigedit_private.rc
+ResourceIncludes=
+MakeIncludes=
+Compiler=-DBUILDING_DLL=1_@@_
+CppCompiler=-DBUILDING_DLL=1_@@_
+Linker=--export-all-symbols --add-stdcall-alias_@@_ -fpic -lrpcrt4_@@_C:/libsndfile-1_0_17/libsndfile-1.lib_@@_C:/libgig-3.1.1/libgig.lib_@@_-lgtkmm-2.4_@@_-lgdkmm-2.4_@@_-lglibmm-2.4_@@_-lsigc-2.0_@@_-lpangomm-1.4_@@_-lcairomm-1.0_@@_-lglibmm-2.4_@@_-latk-1.0_@@_-latkmm-1.6_@@_-lpango-1.0_@@_-lgobject-2.0_@@_-lgmodule-2.0_@@_-lgthread-2.0_@@_-lglib-2.0_@@_
+IsCpp=1
+Icon=
+ExeOutput=
+ObjectOutput=
+OverrideOutput=0
+OverrideOutputName=libgigedit.dll
+HostApplication=
+Folders=
+CommandLine=
+UseCustomMakefile=0
+CustomMakefile=
+IncludeVersionInfo=1
+SupportXPThemes=0
+CompilerSet=0
+CompilerSettings=0000000000000000000000
+
+[Unit1]
+FileName=dllmain.cpp
+CompileCpp=1
+Folder=
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit2]
+FileName=..\src\gigedit\dimensionmanager.cpp
+CompileCpp=1
+Folder=libgigedit
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit3]
+FileName=..\src\gigedit\dimregionchooser.cpp
+CompileCpp=1
+Folder=libgigedit
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit4]
+FileName=..\src\gigedit\dimregionedit.cpp
+CompileCpp=1
+Folder=libgigedit
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit5]
+FileName=..\src\gigedit\mainwindow.cpp
+CompileCpp=1
+Folder=libgigedit
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit6]
+FileName=..\src\gigedit\gigedit.cpp
+CompileCpp=1
+Folder=libgigedit
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit7]
+FileName=..\src\gigedit\paramedit.cpp
+CompileCpp=1
+Folder=libgigedit
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[Unit8]
+FileName=..\src\gigedit\regionchooser.cpp
+CompileCpp=1
+Folder=libgigedit
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
+[VersionInfo]
+Major=@GIGEDIT_VER_MAJOR@
+Minor=@GIGEDIT_VER_MINOR@
+Release=@GIGEDIT_VER_RELEASE@
+Build=0
+LanguageID=1033
+CharsetID=1252
+CompanyName=The LinuxSampler Project
+FileVersion=
+FileDescription=Gigasampler format instrument editor
+InternalName=
+LegalCopyright=(c) 2006,2007 Andreas Persson
+LegalTrademarks=
+OriginalFilename=
+ProductName=libgigedit
+ProductVersion=
+AutoIncBuildNr=0
+
